# CT_BeamHardening

./: .gitignore  README.md  meson.build
CNN-AI-CT/: CNN_ai-ct.py  CNN_ai_ct.py  dataloader.py  datasets.json  datasets_all.json  noisy_indexes.json  ref_idx.py  runModel.py  train.py  utils.py  visualization.py
CNN-AI-CT/test_cases/: test_dataloader.py
Unet/: Unet.py  dataloader.py  train.py
aRTist_project/: IPVS_Scene.aRTist  IPVS_Scene2.aRTist
data_analysis_scripts/: calculate_cutted_mean.py  plot_sample_differences.py
dataset_preparation_scripts/: plot_tiff.py  preprocess.py  reco_post_processing.py  transpose_hdf5.py  volume_cutter.py
dataset_preparation_scripts/preprocessing/: __init__.py  preprocess.py
dataset_preparation_scripts/tiff_to_hdf5/: tiff_to_hdf5.py
dataset_preparation_scripts/tiff_to_hdf5/stuff/: maye_needed.py  stefan_dbg.ipynb  stefan_dbg.py
models/: CNN_ai_ct.py  CNN_ai_ct_silu.py  CNN_ai_ct_skip.py  CNN_ai_ct_trans_skip.py  IRR_CNN_ai_ct.py  PerceiverModel.py  Unet.py  dataloader.py  datasets.json  parseTorchScript.py  removeBeamHardening.py  runModel.py  train.py  utils.py
models/checkpoints/: cnn-ai-ct.pt  cnn-ai-ct_spielzeugmotor_v4.pt  cnn-ai-ct_zuendkerze_v0.pt
models/test_cases/: test_dataloader.py
src/: CNNAiCt.cpp  CNNAiCt.hpp  ExtFilterPytorchModel.cpp  ExtFilterPytorchModel.json  PytorchModel.cpp  PytorchModel.hpp  meson.build
tools/: testNormalizations.py
